<resources>
    <string name="app_name">Minesweeper</string>

    <string name="info_game_over">Game Over!</string>
    <string name="info_game_resumed">Game resumed</string>

    <!--  ActionBar Items  -->
    <string name="action_autoSaveGame">Auto-Save Game</string>
    <string name="action_newGame">New Game</string>
    <string name="action_newBeginnerGame">New Game (Beginner)</string>
    <string name="action_newIntermediateGame">New Game (Intermediate)</string>
    <string name="action_newExpertGame">New Game (Expert)</string>
    <string name="about">About</string>
    <string name="aboutDialogTitle">About Minesweeper</string>
    <string name="aboutDialog_banner">Created by Sruly Wolper and YD Saxon</string>
    <string name="OK">OK</string>

    <!--  Status Bar Items  -->

    <!--  Preference Key  -->
    <string name="key_use_auto_save">USE_AUTO_SAVE</string>
    <string name="title_use_auto_save">Use Auto-Save</string>
    <string name="title_activity_how_to_play">How to Play</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">
        Recommendations for people to contact based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="board_space">Board Space</string>
    <string name="help_text">Instructions:

        Objective: Clear the entire mine field of bombs.

        </string>
    <string name="how_to_play_menu_item">How to Play</string>
    <string name="aboutDialog_title">About</string>
    <string name="objective">Objective:</string>
    <string name="padding">---------------------------------------------------------------</string>
    <string name="title_activity_results">Instructions</string>
    <string name="start">Start:</string>
    <string name="gamePlay">Game Play:</string>
    <string name="instructions_gamePlay">Each field has 8 fields which surround it (excluding corners). The number reveals how many of those fields contain bombs.</string>
    <string name="instructions_Start">Click a random field and hope you don\'t hit a bomb! (HINT: Sides and corners are less likely to be a bomb.</string>
    <string name="winning">How to Win:</string>
    <string name="instructions_winning">If you think a field holds a bomb, simply flag it by long clicking. When you flag all the bombs, you win!</string>
</resources>